[package]
name = "blueprint-tangle-extra"
version = "0.1.0-alpha.10"
description = "Tangle Network extra utilities for Blueprint framework"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-core.workspace = true
bytes.workspace = true
document-features = { workspace = true, features = ["default"] }
futures-core.workspace = true
futures-util.workspace = true
tower = { workspace = true, features = ["filter"] }
tangle-subxt.workspace = true
serde.workspace = true
pin-project-lite = { workspace = true }

# Macros
serde_json = { workspace = true, features = ["alloc"], optional = true }
cargo_metadata = { workspace = true, optional = true }

# Metadata types
cid = { workspace = true, features = ["serde", "alloc"], optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
color-eyre = { workspace = true, features = ["color-spantrace", "track-caller"] }
tempfile = { workspace = true }
paste = { workspace = true }
serde_bytes = { workspace = true, features = ["alloc"] }
serde_test.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
blueprint-testing-utils = { path = "../testing-utils", features = ["tangle"] }

[features]
default = ["std", "tracing", "macros"]

#! ### Core

## Enable standard library support
std = ["futures-util/std", "cid?/std", "tangle-subxt/std"]

## Enable support for web targets
web = ["futures-util/std", "cid?/std", "tangle-subxt/web"]

## Enable [tracing] support
##
## [tracing]: https://crates.io/crates/tracing
tracing = ["blueprint-core/tracing"]

#! ### Other

## Enable access to the metadata types used in `blueprint.json` generation
metadata-types = ["dep:cid", "dep:thiserror"]


macros = ["dep:serde_json", "dep:cargo_metadata", "metadata-types"]
